# ROVI2

./: CMakeLists.txt  Guide_to_edit_Rosnode_in_qtcreator  Q.txt  Q.txt~  README.md  RosCORE.sh  Ros_camera_calibration  calibrate_stereo_image  camera_cali.yaml  creating_workspace_in_ros  script.lua
Pre-Cmakelist/: CMakelist.txt
Robotics/InverseKinematics/build-src-Desktop-Default/: CMakeCache.txt  Lektion01.cbp  Makefile  cmake_install.cmake  main
Robotics/InverseKinematics/src/: CMakeLists.txt  main.cpp
Robotics/Nodes_Packages/src/Robot_move/: CMakeLists.txt  main.cpp  package.xml
Robotics/Nodes_Packages/src/Robot_move/include/: move_robot.h
Robotics/Nodes_Packages/src/Robot_stat/: CMakeLists.txt  main.cpp  package.xml
Robotics/Nodes_Packages/src/Robot_stat/srv/: setConfiguration.srv  setTransformation.srv
Robotics/RoadMap_pkg/: CMakeLists.txt  main.cpp  roadmap.cpp  roadmap.hpp
Robotics/ca/: lkk.asdwa  log.caticatkc  log.caticatkcat
Robotics/ca/devel/: .catkin  .rosinstall  setup.sh
Robotics/ca/devel/include/caros_common_msgs/: CarosNodeState.h  ConfigBoolRequest.h  ConfigBoolResponse.h  ConfigIntRequest.h  ConfigIntResponse.h  EmptySrvRequest.h  EmptySrvResponse.h  Q.h
Robotics/ca/devel/include/caros_common_robwork_msgs/: GetRwStateRequest.h  GetRwStateResponse.h  RwState.h  RwStateData.h
Robotics/ca/devel/include/caros_control_msgs/: GripperGripQRequest.h  GripperGripQResponse.h  GripperMoveQRequest.h  GripperMoveQResponse.h  GripperSetForceQRequest.h  GripperSetForceQResponse.h  GripperSetVelocityQRequest.h  GripperSetVelocityQResponse.h  GripperState.h  GripperStopMovementRequest.h  GripperStopMovementResponse.h  RobotState.h  SerialDeviceForceControlStartRequest.h  SerialDeviceForceControlStartResponse.h  SerialDeviceForceControlStopRequest.h  SerialDeviceForceControlStopResponse.h  SerialDeviceForceControlUpdateRequest.h  SerialDeviceForceControlUpdateResponse.h  SerialDeviceMoveLinRequest.h  SerialDeviceMoveLinResponse.h  SerialDeviceMovePtpRequest.h  SerialDeviceMovePtpResponse.h  SerialDeviceMovePtpTRequest.h  SerialDeviceMovePtpTResponse.h  SerialDeviceMoveServoQRequest.h  SerialDeviceMoveServoQResponse.h  SerialDeviceMoveServoTRequest.h  SerialDeviceMoveServoTResponse.h  SerialDeviceMoveVelQRequest.h  SerialDeviceMoveVelQResponse.h  SerialDeviceMoveVelTRequest.h  SerialDeviceMoveVelTResponse.h
Robotics/ca/devel/include/caros_sensor_msgs/: ButtonSensorState.h  PoseSensorState.h  TactileArrayData.h  TactileArrayState.h
Robotics/ca/devel/include/caros_universalrobot/: GripperState.h  RobotState.h  UrServiceEmptyRequest.h  UrServiceEmptyResponse.h  UrServiceForceModeStartRequest.h  UrServiceForceModeStartResponse.h  UrServiceForceModeStopRequest.h  UrServiceForceModeStopResponse.h  UrServiceForceModeUpdateRequest.h  UrServiceForceModeUpdateResponse.h  UrServiceServoQRequest.h  UrServiceServoQResponse.h  UrServiceServoTRequest.h  UrServiceServoTResponse.h
Robotics/ca/devel/lib/caros_netft/: caros_netft_node
Robotics/robot/devel/: .catkin  .rosinstall  setup.sh
Robotics/robot_simulation/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  main.cpp  pathplanning.cpp  pathplanning.hpp
Robotics/robot_simulation/WorkStation2/: CollisionSetup.xml  WS2_Scene.wc.xml  WS2_Scene.wc.xml~
Robotics/robot_simulation/WorkStation2/Geometry/: ball.stl
Robotics/robot_simulation/WorkStation2/UR/: Device.xml  UR.wc.xml
Robotics/robot_simulation/WorkStation2/UR/geometry/: bumblebee2_scaled.stl
Vision/cali_image_cap/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Vision/cali_image_cap/src/: CMakeLists.txt
Vision/cali_image_cap/src/stereo/: CMakeLists.txt  CMakeLists.txt~  stereo.cpp
Vision/cali_image_cap/src/subscriber/: CMakeLists.txt  CMakeLists.txt~  main.cpp  package.xml~  subscriber.cpp  subscriber.cpp.orig  subscriber.cpp~
Vision/detection_n_triangulation/build-stereo_tmp-Desktop-Debug/: Makefile  stereo_tmp
Vision/detection_n_triangulation/stereo_tmp/: main.cpp  stereo_tmp.pro
Vision/disparity_map/disparity_map/: main.cpp
Vision/disparity_map/disparity_map.xcodeproj/: project.pbxproj
Vision/disparity_map/disparity_map.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Vision/stereo/stereo/: main.cpp
Vision/stereo/stereo.xcodeproj/: project.pbxproj
Vision/stereo/stereo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Vision/stereo2/stereo2/: main.cpp
Vision/stereo2/stereo2.xcodeproj/: project.pbxproj
Vision/stereo2/stereo2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Vision/tracking_with_kalman/build-tracking_with_kalman-Desktop-Debug/: Makefile  tracking_with_kalman
Vision/tracking_with_kalman/tracking_with_kalman/: main.cpp
(+312 files in other folders)
